fix overlapping menu

--- a/SCSS/orawellness.scss
+++ b/SCSS/orawellness.scss
@@ -1204,6 +1204,7 @@ img.alignright,
 .menu .menu-item.sfHover > ul.sub-menu {
     left: auto;
     opacity: 1;
+    z-index: 100;
 }
 
 /* ## Site Header Navigation
